static/style/common.css
:root {
    --black: #231F20;
    --white: #F2F3F4;

    --background-color: var(--white);
    --color: var(--black);

    --min-font-size: 16px;
    --header-size-diff: 7px;
}

@media (prefers-dark-interface){
    :root {
        --background-color: var(--black);
        --color: var(--white);
    }
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    font-family: Verdana, Tahoma, Arial, sans-serif;

    background-color: var(--background-color);
    color: var(--color);
    padding: 0;
}

body {
    max-width: 800px;
}

body > * {
    padding: 18px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    margin-top: 20px;
    margin-bottom: 10px;
}

h1 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 6);
}

h2 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 5);
}

h3 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 4);
}

h4 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 3);
}

h5 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 2);
}

h6 {
    font-size: calc(var(--min-font-size) + var(--header-size-diff));
}

p {
    font-size: var(--min-font-size);
    margin-bottom: 5px;
}

a {
    color: var(--color);
}

a:hover {
    color: var(--background-color);
    background-color: var(--color);
}

.flex {
    display: flex;
    flex-wrap: wrap;
}

.right {
    margin: 0;
    margin-left: auto;
}

nav {
    padding-bottom: 18px;
}

nav > * {
    font-size: calc(var(--min-font-size) + var(--header-size-diff) * 2);

    color: var(--color);
    text-decoration: none;
    margin: auto 20px auto 0;
}

nav > *:hover {
    background-color: var(--color);
    color: var(--background-color);
}

#title svg {
    margin: 5px;
    margin-bottom: 0;
    width: auto;
    height: 50px;
}

.credit {
    float: right;
    font-size: 8px;
    color: grey;
}

main > img {
    width: 100%;
    margin-bottom: 10px;
}

footer hr {
    margin-bottom: 5px;
}

footer p {
    margin-top: auto;
    margin-bottom: auto;
}

footer a {
    color: var(--color);
    margin: 0;
    padding: 1px;
}

footer a:hover {
    color: var(--background-color);
    background-color: var(--color);
}

svg.social-icon {
    width: auto;
    height: 30px;
    padding: 5px;
    padding-bottom: 2px;
    text-decoration: none;

}

